@@ -138,6 +138,7 @@ enum conn_states {
 #define NREAD_SET 2
 #define NREAD_REPLACE 3
 #define NREAD_APPEND 4
+#define NREAD_PREPEND 5
 
 typedef struct {
     int    sfd;
